Better web output of challenges

--- a/src/templates/challenges.html
+++ b/src/templates/challenges.html
@@ -1,9 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+
+<title>Page Title</title>
 
 
+</head>
 
-# Sum two values
+<body>
 
-![](img/sum_two_values.png)
+<h1>Sum two values</h1>
+
+<p><img src="img/sum_two_values.png" alt="" /></p>
+
+{{ prueba }}
+
+
+{% include 'sum_two_values.html' %}
+
 
 # Sum many values
 
@@ -28,3 +44,6 @@
 # El mediano de una lista
 
 #
+
+</body>
+</html>
