--- a/src/templates/reference.html
+++ b/src/templates/reference.html
@@ -9,19 +9,46 @@
 
 
 {% block content %}
-<h1> Reference </h1>
+<h1> Reference - The Compy Project</h1>
 
-<p> Here we show you examples of the commands you can
-issue to the Compy screen.</p>
+<p> In this page you can find codes for colors, keys and chars, used
+    to program in Compy.</p>
 
-<h2> Color </h2>
+<h2> Color Codes</h2>
+
+These are the codes used in commands like scrn.printf() or scrn.set_bg_color().
 
 <ul>
 {% for code, name, color in colors %}
-    <li style="color={{ color }}"> Code: {{ code }} Name: {{ name }}</li>
+    <li style="color:{{ color }}"> Code: {{ code }} - Name: {{ name }}</li>
 {% endfor %}
 
 </ul>
+
+<h2> Key codes </h2>
+
+These are the codes returned by scrn.input(), etc.
+
+<ul>
+{% for code, key in keys %}
+    <li> Code: {{ code }} - Key: {{ key }}</li>
+{% endfor %}
+
+</ul>
+
+
+<h2> Chars </h2>
+
+These are the codes of chars you can use in scrn.poke()
+
+<ul>
+{% for code, key in keys %}
+    <li> Code: {{ code }} - Key: {{ key }}</li>
+{% endfor %}
+
+</ul>
+
+
 
 <hr/>
 
