--- a/compy/templates/index.html
+++ b/compy/templates/index.html
@@ -31,5 +31,11 @@
 
 <p><a href="reference.html">  Reference </a></p>
 
+<p><a href="colors.html">  Colors in Compy </a></p>
+
+<p><a href="keys.html">  Keys in Compy </a></p>
+
+<p><a href="chars.html">  Chars in Compy </a></p>
+
 {% endblock %}
 
