--- a/compy/templates/print_hello_world.html
+++ b/compy/templates/print_hello_world.html
@@ -1,7 +1,10 @@
-<div class="highlight"><pre><span class="kn">from</span> <span class="nn">src.run</span> <span class="kn">import</span> <span class="n">run</span>
+<div class="highlight"><pre><span class="kn">import</span> <span class="nn">compy</span>
 
-<span class="k">def</span> <span class="nf">main</span><span class="p">(</span><span class="n">scrn</span><span class="p">):</span>
-    <span class="n">scrn</span><span class="o">.</span><span class="n">printf</span><span class="p">(</span><span class="s">&#39;Hello world !!!&#39;</span><span class="p">)</span>
 
-<span class="n">run</span><span class="p">(</span><span class="n">main</span><span class="p">)</span>
+<span class="k">def</span> <span class="nf">main</span><span class="p">(</span><span class="n">sc</span><span class="p">):</span>
+
+    <span class="n">sc</span><span class="o">.</span><span class="n">printf</span><span class="p">(</span><span class="s">&#39;Hello world !!!&#39;</span><span class="p">)</span>
+
+
+<span class="n">compy</span><span class="o">.</span><span class="n">run</span><span class="p">(</span><span class="n">main</span><span class="p">)</span>
 </pre></div>
