Split reference html page to 4 differents html pages

--- a/compy/templates/examples.html
+++ b/compy/templates/examples.html
@@ -29,6 +29,18 @@
     <hr/>
 
 
+<h2>sc.printf options</h2>
+
+    <h3>Result:</h3>
+
+    <p> <img src="img/printf_options.png" alt="" /> </p>
+
+    <h3>Code of 'printf_options.py':</h3>
+
+    <pre class="code"> <code> {% include 'printf_options.html' %} </code> </pre>
+
+    <hr/>
+
 
 
 
