--- a/compy/templates/index.html
+++ b/compy/templates/index.html
@@ -29,7 +29,7 @@
 
 <p><a href="challenges.html"> Challenges </a></p>
 
-<p><a href="reference.html">  Reference </a></p>
+<p><a href="commands.html">  Commands in Compy </a></p>
 
 <p><a href="colors.html">  Colors in Compy </a></p>
 
