Fix bug in printf

--- a/compy/templates/examples.html
+++ b/compy/templates/examples.html
@@ -13,7 +13,7 @@
 
 <h1> Examples</h1>
 
-    <p> Here we show you examples of the commands you can
+    <p> Here we show examples of the commands you can
     issue to the Compy screen.</p>
 
 <h2>Print "Hello world"</h2>
