--- a/compy/templates/commands.html
+++ b/compy/templates/commands.html
@@ -11,15 +11,20 @@
 
 <h2> sc.printf </h2>
 
+
+
 <pre class="code"> <code>
 
+    # Simple print
     sc.printf('Hello')
 
+    # Print on a different color
     sc.printf('Hello', color='black')
 
+    # Colors can be chosen by numbers
     sc.printf('Hello', color=4)
 
-    sc.printf('Hello, ', next_line=False)
+    sc.printf('Hello, ', stay=True)
 
     sc.printf('partner!', color=0)
 
@@ -27,7 +32,7 @@
 
     sc.printf('Hello', reverse = True)
 
-    sc.printf('Hello, or better...', color='light-green', reverse=True, next_line=False)
+    sc.printf('Hello, or better...', color='light-green', reverse=True, stay=True)
 
     sc.printf('Good bye!!!')
 
