--- a/compy/templates/sum_two_values.html
+++ b/compy/templates/sum_two_values.html
@@ -1,28 +1,25 @@
-<div class="highlight"><pre><span class="c">#!/usr/bin/env python</span>
-<span class="c">#  -*- coding: utf-8 -*-</span>
+<div class="highlight"><pre><span class="kn">import</span> <span class="nn">compy</span>
 
 
-<span class="kn">import</span> <span class="nn">compy</span>
+<span class="k">def</span> <span class="nf">main</span><span class="p">(</span><span class="n">sc</span><span class="p">):</span>
 
+    <span class="n">sc</span><span class="o">.</span><span class="n">clear_screen</span><span class="p">()</span>
 
-<span class="k">def</span> <span class="nf">main</span><span class="p">(</span><span class="n">scrn</span><span class="p">):</span>
+    <span class="n">sc</span><span class="o">.</span><span class="n">printf</span><span class="p">()</span>
+    <span class="n">sc</span><span class="o">.</span><span class="n">printf</span><span class="p">(</span><span class="s">&#39;    SUM OF TWO VALUES&#39;</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="mi">4</span><span class="p">)</span>
+    <span class="n">sc</span><span class="o">.</span><span class="n">printf</span><span class="p">(</span><span class="s">&#39;    =================&#39;</span><span class="p">)</span>
+    <span class="n">sc</span><span class="o">.</span><span class="n">printf</span><span class="p">()</span>
 
-    <span class="n">scrn</span><span class="o">.</span><span class="n">clear_screen</span><span class="p">()</span>
+    <span class="n">first_value</span> <span class="o">=</span> <span class="n">sc</span><span class="o">.</span><span class="n">input</span><span class="p">(</span><span class="s">&quot;Give me one value: &quot;</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="mi">8</span><span class="p">)</span>
 
-    <span class="n">scrn</span><span class="o">.</span><span class="n">printf</span><span class="p">()</span>
-    <span class="n">scrn</span><span class="o">.</span><span class="n">printf</span><span class="p">(</span><span class="s">&#39;    SUM OF TWO VALUES&#39;</span><span class="p">,</span> <span class="n">color</span> <span class="o">=</span> <span class="mi">4</span><span class="p">)</span>
-    <span class="n">scrn</span><span class="o">.</span><span class="n">printf</span><span class="p">(</span><span class="s">&#39;    =================&#39;</span><span class="p">)</span>
-    <span class="n">scrn</span><span class="o">.</span><span class="n">printf</span><span class="p">()</span>
+    <span class="n">second_value</span> <span class="o">=</span> <span class="n">sc</span><span class="o">.</span><span class="n">input</span><span class="p">(</span><span class="s">&quot;Give me another value: &quot;</span><span class="p">)</span>
 
-    <span class="n">value_one</span> <span class="o">=</span> <span class="n">scrn</span><span class="o">.</span><span class="n">input</span><span class="p">(</span><span class="s">&quot;Give me one value: &quot;</span><span class="p">,</span> <span class="n">color</span> <span class="o">=</span> <span class="mi">8</span><span class="p">)</span>
+    <span class="n">sum_of_values</span> <span class="o">=</span> <span class="n">first_value</span> <span class="o">+</span> <span class="n">second_value</span>
 
-    <span class="n">value_two</span> <span class="o">=</span> <span class="n">scrn</span><span class="o">.</span><span class="n">input</span><span class="p">(</span><span class="s">&quot;Give me another value: &quot;</span><span class="p">)</span>
+    <span class="n">response</span> <span class="o">=</span> <span class="s">&#39;The sum of {} and {} is {}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span><span class="n">first_value</span><span class="p">,</span> <span class="n">second_value</span><span class="p">,</span> <span class="n">sum_of_values</span><span class="p">)</span>
 
-    <span class="n">sum_of_values</span> <span class="o">=</span> <span class="n">value_one</span> <span class="o">+</span> <span class="n">value_two</span>
-
-    <span class="n">scrn</span><span class="o">.</span><span class="n">printf</span><span class="p">()</span>
-    <span class="n">scrn</span><span class="o">.</span><span class="n">printf</span><span class="p">(</span><span class="s">&#39;The sum of {} and {} is {}&#39;</span><span class="o">.</span><span class="n">format</span><span class="p">(</span>
-        <span class="n">value_one</span><span class="p">,</span> <span class="n">value_two</span><span class="p">,</span> <span class="n">sum_of_values</span><span class="p">),</span> <span class="n">color</span><span class="o">=</span><span class="mi">6</span><span class="p">)</span>
+    <span class="n">sc</span><span class="o">.</span><span class="n">printf</span><span class="p">()</span>
+    <span class="n">sc</span><span class="o">.</span><span class="n">printf</span><span class="p">(</span><span class="n">response</span><span class="p">,</span> <span class="n">color</span><span class="o">=</span><span class="mi">6</span><span class="p">)</span>
 
 
 <span class="n">compy</span><span class="o">.</span><span class="n">run</span><span class="p">(</span><span class="n">main</span><span class="p">)</span>
