--- a/compy/templates/examples.html
+++ b/compy/templates/examples.html
@@ -24,7 +24,7 @@
 
     <h3>Code of 'print_hello_world.py':</h3>
 
-    <pre class="code"> <code> {% include 'print_hello_world.html' %} </code> </pre>
+    <pre class="code"> <code> {% include 'temp/print_hello_world.html' %} </code> </pre>
 
     <hr/>
 
@@ -37,7 +37,7 @@
 
     <h3>Code of 'printf_options.py':</h3>
 
-    <pre class="code"> <code> {% include 'printf_options.html' %} </code> </pre>
+    <pre class="code"> <code> {% include 'temp/printf_options.html' %} </code> </pre>
 
     <hr/>
 
